@@ -17,6 +17,8 @@
     width: 34%;
     height: 100%;
     padding: 0px;
+    overflow: hidden;
+    overflow-x: visible;
 }
 
 .connectionContainer .connectionRightColumn {
