@@ -1,3 +1,4 @@
+2015-03-04 Fixed issue with double lines in Android 4.1.1, 4.1.2, 4.2.2, 4.3, 4.4.2 in Connection module
 2015-03-02 Fixed issues with parsing HTML in Text Audio module
 2015-02-27 Fixed issue with serving of mixed content by HTTPS and HTTP in YouTube module
 2015-02-27 Fixed issue with keeping state disable/enable in filledGap in Text module
